backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_missing_name.rs
use foundation_macros::wasm_entrypoint;

#[wasm_entrypoint(desc = "no name")]
pub fn missing_name() {}

fn main() {}
