backends/foundation_macros/tests/trybuild/fail/wasm_entrypoint_missing_name.stderr
error: missing required attribute `name`
 --> tests/trybuild/fail/wasm_entrypoint_missing_name.rs:3:1
  |
3 | #[wasm_entrypoint(desc = "no name")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `wasm_entrypoint` (in Nightly builds, run with -Z macro-backtrace for more info)
